platform/gateway-api/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: platform-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx

  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.stackcouture.online"

    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: wildcard-stackcouture-tls

    allowedRoutes:
      namespaces:
        from: All
