platform/gateway-api/base/argocdhttproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
  - name: platform-gateway
    namespace: nginx-gateway

  hostnames:
  - argocd.stackcouture.online

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /

    backendRefs:
    - name: argocd-server
      port: 80
